# EchoChamber

./: .gitignore  CMakeLists.txt  README.md
includes/: colours.h  dialoguebox.h  filepath.h  global.h
src/: dialoguebox.cpp  filepaths.cpp  global.cpp  main.cpp
